--- a/CipherForm.resx
+++ b/CipherForm.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="textBox1.Text" xml:space="preserve">
+    <value>Любя, съешь щипцы, — вздохнёт мэр, — кайф жгуч.
+Шеф взъярён тчк щипцы с эхом гудбай Жюль.
+Эй, жлоб! Где туз? Прячь юных съёмщиц в шкаф.
+Экс-граф? Плюш изъят. Бьём чуждый цен хвощ!
+Эх, чужак! Общий съём цен шляп (юфть) — вдрызг!
+Эх, чужд кайф, сплющь объём вши, грызя цент.
+Чушь: гид вёз кэб цапф, юный жмот съел хрящ.</value>
+  </data>
   <metadata name="saveFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
